CKAD/04-pod-resource-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-resources
  namespace: pod-resources
spec:
  containers:
  - name: app
    image: nginx:1.16 
    resources:
      requests:
        memory: "50Mi"
        cpu: "40m"
