CKAD/09-deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ckad00014
  labels:
    app: nginx
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 80
