CKAD/11-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-configmap
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:stable
    volumeMounts:
    - name: config-volume
      mountPath: /some/path
  volumes:
  - name: config-volume
    configMap:
      name: some-config
