CKAD/12-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:1.16
