CKAD/19-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ing-svc
  namespace: ingress-ckad
spec:
  ports:
  - port: 80
    targetPort: 81
    protocol: TCP
  selector:
    # app: nginx-test
    name: nginx-ing
