CKAD/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kk-ingress
  namespace: ingress-kk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kk.example.com
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: nginxsvc-kk
            port:
              number: 80
