CKAD/18-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-front
  namespace: ckad00018
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          db-access: "true"
  egress:
  - to:
    - podSelector:
        matchLabels:
          db-access: "true"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-front
  namespace: ckad00018
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          front-access: "true"
  egress:
  - to:
    - podSelector:
        matchLabels:
          front-access: "true"
---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-front-db-only
#   namespace: ckad00018
# spec:
#   podSelector:
#     matchLabels:
#       role: restricted        # ← 這是關鍵：ckad00018-newpod 要加上這個標籤才會被這條 NetworkPolicy 套用
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: front
#     - podSelector:
#         matchLabels:
#           app: db
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app: front
#     - podSelector:
#         matchLabels:
#           app: db
